エラーの修正

--- a/infra/docker/php/php.ini
+++ b/infra/docker/php/php.ini
@@ -3,7 +3,7 @@ expose_php = on
 max_execution_time = 30
 max_input_vars = 1000
 upload_max_filesize = 64MB
-post_max_size = 128Mb
+post_max_size = 128M
 memory_limit = 256MB
 error_reporting = E_ALL
 display_errors = on
